Update 'f7ok69f8t-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:cba6b7fac3544f3b3fcce6bd38118b17715c0df0@sha256:dc063c33e8430839d5a38f9d346beaac57a0e0380f1a7dfe1a5bdec49cd335fe

--- a/components/f7ok69f8t-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/f7ok69f8t-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: f7ok69f8t-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:cba6b7fac3544f3b3fcce6bd38118b17715c0df0@sha256:dc063c33e8430839d5a38f9d346beaac57a0e0380f1a7dfe1a5bdec49cd335fe
+          name: container-image
